Fixed logo on mobile

--- a/projects.css
+++ b/projects.css
@@ -244,8 +244,8 @@ footer {
   .logo {
     height: 30px;
     width: auto;
-    margin-top: 30px;
-    margin-left: 30px;
+    margin-top: 35px;
+    margin-left: 20px;
   }
 
   .nav_about {
